--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
